@@ -193,6 +193,8 @@ Core and Builtins
 Library
 -------
 
+Issue #16880: Do not assume _imp.load_dynamic() is defined in the imp module.
+
 - Issue #16389: Fixed a performance regression relative to Python 3.1 in the
   caching of compiled regular expressions.
 
